# Rendirium

./: .gitignore  .gitmodules  CMakeLists.txt
src/: fun.lua  helpers.cpp  helpers.hpp  main.cpp  modelLoader.cpp  modelLoader.hpp  yuck.c  yuck.lua
